# sf-course-tasks

final_project/: CMakeLists.txt  Makefile  README.md  app.cpp  app.hpp  chat_client.cpp  chat_client.hpp  chat_msgs.hpp  chat_server.cpp  chat_server.hpp  data_manager_interface.hpp  datetime.cpp  datetime.hpp  file_data_manager.hpp  logger.cpp  logger_interface.hpp  main.cpp  message.cpp  message.hpp  run.sh  tcp_library.cpp
final_project/include/: chat_client.hpp  chat_msgs.hpp  chat_server.hpp  data_manager_interface.hpp  datetime.hpp  db_data_manager.hpp  file_data_manager.hpp  logger.hpp  message.hpp  tcp_library.hpp  user.hpp
final_project/src/: chat_client.cpp  chat_server.cpp  datetime.cpp  logger.cpp  message.cpp  user.cpp
section_1/: module_1.cpp  module_2.cpp  module_3.cpp
section_1/final_project/: Makefile  README.md  app.cpp  app.hpp  datetime.cpp  datetime.hpp  hashtable.hpp  main.cpp  message.cpp  message.hpp  user.cpp  user.hpp
section_1/module_4/: calculate.cpp  calculate.h  main.cpp  run.sh
section_1/module_5/: README.md  app.cpp  app.hpp  input.txt  machine.cpp  machine.hpp  main.cpp  run.sh  slot.cpp  slot.hpp  snack.cpp  snack.hpp
section_1/module_6/: README.md  app.cpp  app.hpp  electronic_goods.cpp  electronic_goods.hpp  electronics.cpp  electronics.hpp  electronics_types.cpp  electronics_types.hpp  main.cpp  run.sh
section_1/module_7/: README.md  bad_length.hpp  integer_array.cpp  integer_array.hpp  main.cpp  run.sh
section_1/module_8/: bad_range.h  custom_array.h  main.cpp  run.sh
section_2/module_12/: module_12.cpp
section_2/module_13/: graph.hpp  main.cpp  run.sh
section_2/module_14/: README.md  main.cpp  run.sh  trie.cpp  trie.hpp
section_2/module_15/: Makefile  hashtable.hpp  main.cpp
section_3/module_20/tcp_example/: Makefile  tcp_client.cpp  tcp_server.cpp
section_3/module_20/udp_example/: Makefile  udp_client.cpp  udp_server.cpp
section_4/: README.md
section_5/module_26/: array_sum.cpp  array_sum.hpp  main.cpp
section_5/module_28/: main.cpp
section_5/module_29/: main.cpp
section_7/module_34/: main.cpp
section_8/module_36/: CMakeLists.txt
section_8/module_36/sources/: Test.cpp  chat_server.cpp  chat_server.h  custom_event.h  data_manager_interface.h  datetime.cpp  db_data_manager.h  file_data_manager.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  tcp_library.cpp  user.cpp
